Avoid page breaks inside tabs and asides

--- a/packages/starlight/style/print.css
+++ b/packages/starlight/style/print.css
@@ -108,6 +108,16 @@
 		background-color: transparent !important;
 	}
 
+	/* user-components/Aside.astro */
+	.starlight-aside {
+		break-inside: avoid;
+	}
+
+	/* user-components/Tabs.astro */
+	starlight-tabs {
+		break-inside: avoid;
+	}
+
 	/* layout/PageFrame.astro */
 	.page > header {
 		position: relative !important;
